test/classes/delete-free/owned/errors/owned-class-instance.chpl
class C {}

var myC = new C();

writeln(owned myC);
